welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:5: error: ')' expected but 'if' found.
	if (talking && (hour >= 20) {
        ^parotTrouble:8: error: ')' expected but 'return' found.
	return false;
        ^