welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if (talking && (hour <= 7) {
		return true;
	}
	if (talking && (hour >= 20) {
		return true;
	}
	return false;
}
